2001-07-03  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	Some more compatibility patches for Windows.
	
	* posix.c (getlogin): getlogin() implementation for Windows.

	* backtrace.c, ioext.c: Include <stdio.h>.

	* unif.c, script.c, rw.c, error.c: Include <io.h>, if it does
	exist.

	* cpp_sig_symbols.in: Added SIGBREAK.

2001-07-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* strports.c (scm_read_0str, scm_eval_0str): Call
	scm_c_read_string and scm_c_eval_string respectively, not
	themselves.  Thanks to Dale P. Smith!

2001-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* unif.c (scm_array_set_x):  The variable args does not
	necessarily have to be a list.  Further, got rid of a redundant
	SCM_NIMP test.

2001-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* list.c (SCM_I_CONS):  Make sure the cell type is initialized
	last.

	* gc.c (s_scm_map_free_list, scm_igc, scm_gc_sweep,
	init_heap_seg):  Fixed signedness.

	(init_heap_seg):  Replaced strange for-loop with a while loop.

	* weaks.h (WEAKSH, SCM_WEAKS_H):  Rename <foo>H to SCM_<foo>_H.

	(SCM_WVECTP):  Prefer !SCM_<pred> over SCM_N<pred>.

	The following patch adds conservative marking for the elements of
	free or allocated cells.

	* gc.c (allocated_mark, heap_segment):  New static functions.

	(which_seg):  Deleted, since the functionality is now provided by
	function heap_segment.

	(map_free_list):  Use heap_segment instead of which_seg.

	(MARK):  If cell debugging is disabled, mark free cells
	conservatively.

	(scm_mark_locations, scm_cellp):  Extracted the search for the
	heap segment of a SCM value into function heap_segment.

	(scm_init_storage):  Allocated cells must be marked
	conservatively.

	* gc.[ch] (scm_gc_mark_cell_conservatively):  New function.

	The following patch changes the representation of weak vectors to
	double cells instead of using an extension of the vector's
	allocated memory.

	* gc.c (MARK):  Use SCM_SET_WVECT_GC_CHAIN instead of assigning to