@@ -187,8 +187,9 @@ scm_create_hook (const char *name, int n_args)
 
 SCM_DEFINE (scm_make_hook, "make-hook", 0, 1, 0, 
             (SCM n_args),
-	    "Create a hook for storing procedure of arity\n"
-	    "@var{n_args}.  @var{n_args} defaults to zero.")
+	    "Create a hook for storing procedure of arity @var{n_args}.\n"
+	    "@var{n_args} defaults to zero.  The returned value is a hook\n"
+	    "object to be used with the other hook procedures.")
 #define FUNC_NAME s_scm_make_hook
 {
   int n;
@@ -235,7 +236,8 @@ SCM_DEFINE (scm_add_hook_x, "add-hook!", 2, 1, 0,
             (SCM hook, SCM proc, SCM append_p),
 	    "Add the procedure @var{proc} to the hook @var{hook}. The\n"
 	    "procedure is added to the end if @var{append_p} is true,\n"
-	    "otherwise it is added to the front.")
+	    "otherwise it is added to the front.  The return value of this\n"
+	    "procedure is not specified.")
 #define FUNC_NAME s_scm_add_hook_x
 {
   SCM arity, rest;
@@ -261,7 +263,8 @@ SCM_DEFINE (scm_add_hook_x, "add-hook!", 2, 1, 0,
 
 SCM_DEFINE (scm_remove_hook_x, "remove-hook!", 2, 0, 0, 
             (SCM hook, SCM proc),
-	    "Remove the procedure @var{proc} from the hook @var{hook}.")
+	    "Remove the procedure @var{proc} from the hook @var{hook}.  The\n"
+	    "return value of this procedure is not specified.")
 #define FUNC_NAME s_scm_remove_hook_x
 {
   SCM_VALIDATE_HOOK (1, hook);
@@ -274,7 +277,8 @@ SCM_DEFINE (scm_remove_hook_x, "remove-hook!", 2, 0, 0,
 
 SCM_DEFINE (scm_reset_hook_x, "reset-hook!", 1, 0, 0, 
             (SCM hook),
-	    "Remove all procedures from the hook @var{hook}.")
+	    "Remove all procedures from the hook @var{hook}.  The return\n"
+	    "value of this procedure is not specified.")
 #define FUNC_NAME s_scm_reset_hook_x
 {
   SCM_VALIDATE_HOOK (1,hook);
@@ -288,7 +292,7 @@ SCM_DEFINE (scm_run_hook, "run-hook", 1, 0, 1,
             (SCM hook, SCM args),
 	    "Apply all procedures from the hook @var{hook} to the arguments\n"
 	    "@var{args}.  The order of the procedure application is first to\n"
-	    "last.")
+	    "last.  The return value of this procedure is not specified.")
 #define FUNC_NAME s_scm_run_hook
 {
   SCM_VALIDATE_HOOK (1,hook);
