@@ -1,3 +1,9 @@
+2001-07-04  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
+
+	* hooks.c (scm_make_hook, scm_add_hook_x),
+	(scm_remove_hook_x, scm_reset_hook_x, scm_run_hook): Added return
+	value info to the docstrings.
+
 2001-07-03  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	Some more compatibility patches for Windows.
@@ -29,7 +35,7 @@
 	last.
 
 	* gc.c (s_scm_map_free_list, scm_igc, scm_gc_sweep,
-	init_heap_seg):  Fixed signedness.
+	init_heap_seg): Fixed signedness.
 
 	(init_heap_seg):  Replaced strange for-loop with a while loop.
 
